--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   </head>
   <body>
     <div class="map"></div>
-    <script src="./js/index.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
