add Random Methods

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <style>
       .map {
-        width: 1000px;
-        height: 800px;
+        width: 800px;
+        height: 600px;
         background-color: #ccc;
+        position: relative;
       }
     </style>
     <title>Snake</title>
